container and panel changes, add button not working currently